kubernetes/apps/observability/healthchecks/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: healthchecks
  namespace: observability
  labels:
    route.scope: internal
  annotations:
    external-dns.alpha.kubernetes.io/public: "false"
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: Observability
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Observability
    gethomepage.dev/name: Healthchecks
    gethomepage.dev/icon: healthchecks.png
    gethomepage.dev/href: https://healthchecks.vaderrp.com
    gethomepage.dev/pod-selector: app.kubernetes.io/name=healthchecks
spec:
  parentRefs:
    - name: gateway-internal
      namespace: network
  hostnames: ["healthchecks.vaderrp.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: healthchecks
          port: 8000
